<?xml version='1.0' encoding='UTF-8'?>
<resources>
  <string name="app_name">Private Tracking Client</string>
  <string name="app_logo">Tracking</string>
  <string name="channel_default">Primary Channel</string>
  <string name="settings_url_title">Server URL</string>
  <string name="settings_url_summary">Tracking server URL</string>
  <string name="settings_bib_title">Bib</string>
  <string name="settings_bib_summary">Your bib number</string>
  <string name="settings_token_title">Token</string>
  <string name="settings_token_summary">Authorization token</string>
  <string name="settings_interval_title">Frequency</string>
  <string name="settings_interval_summary">Reporting interval in seconds</string>
  <string name="settings_distance_title">Distance</string>
  <string name="settings_distance_summary">Reporting distance in meters</string>
  <string name="settings_angle_title">Angle</string>
  <string name="settings_angle_summary">Reporting angle in degrees</string>
  <string name="settings_status_title">Service status</string>
  <string name="settings_status_off">Start</string>
  <string name="settings_status_on">Stop</string>
  <string name="settings_status_off_summary">Tracking stopped</string>
  <string name="settings_status_on_summary">Tracking running</string>
  <string name="settings_buffer">Offline buffering</string>
  <string name="settings_buffer_off_summary">Buffering off</string>
  <string name="settings_buffer_on_summary">Buffering on</string>
  <string name="settings_wakelock">Wake lock</string>
  <string name="settings_wakelock_off_summary">Wake lock off</string>
  <string name="settings_wakelock_on_summary">Wake lock on</string>
  <string name="settings_accuracy_title">Location accuracy</string>
  <string name="settings_accuracy_summary">Desired location accuracy</string>
  <string name="settings_accuracy_high">High</string>
  <string name="settings_accuracy_medium">Medium</string>
  <string name="settings_accuracy_low">Low</string>
  <string name="settings_foreground_title">Foreground service</string>
  <string name="settings_foreground_summary">Increase service priority</string>
  <string name="menu_status">Status</string>
  <string name="menu_shortcuts">Add shortcuts</string>
  <string name="menu_clear">Clear</string>
  <string name="status_service_create">Tracking started</string>
  <string name="status_service_destroy">Tracking stopped</string>
  <string name="status_send_success">Send successfully</string>
  <string name="status_send_fail">Send failed</string>
  <string name="status_location_update">Location update</string>
  <string name="status_network_online">Network online</string>
  <string name="status_network_offline">Network offline</string>
  <string name="hidden_app_name">Device Settings</string>
  <string name="error_msg_invalid_url">Please enter a valid http:// or https:// URL</string>
  <string name="request_exception">To continuously collect location data please turn off battery optimization for the app.</string>
  <string name="request_background">To continuously collect location data please enable \"%s\" permission.</string>
  <string name="request_background_option">Allow all the time</string>
</resources>
