<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:defaultValue="false"
        android:key="status"
        android:summaryOff="@string/settings_status_off_summary"
        android:summaryOn="@string/settings_status_on_summary"
        android:switchTextOff="@string/settings_status_off"
        android:switchTextOn="@string/settings_status_on"
        android:title="@string/settings_status_title" />

    <EditTextPreference
        android:key="bib"
        android:summary="@string/settings_bib_summary"
        android:title="@string/settings_bib_title" />

    <EditTextPreference
        android:key="secret"
        android:title="@string/settings_token_title"
        android:summary="@string/settings_token_summary" />

    <EditTextPreference
        android:defaultValue="@string/settings_url_default_value"
        android:key="url"
        android:summary="@string/settings_url_summary"
        android:title="@string/settings_url_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="wakelock"
        android:summaryOff="@string/settings_wakelock_off_summary"
        android:summaryOn="@string/settings_wakelock_on_summary"
        android:title="@string/settings_wakelock" />

</PreferenceScreen>
